--- a/apps/logistics-frontend/_Imports.razor
+++ b/apps/logistics-frontend/_Imports.razor
@@ -17,6 +17,7 @@
 @using logistics_frontend.Models.Delivery
 @using logistics_frontend.Models.Inventory
 @using logistics_frontend.Models.Errors
+@using logistics_frontend.Models.Store
 @using logistics_frontend.Services
 @using logistics_frontend.Pages.Shared.Layouts
 @using LeafletForBlazor
