feat (frontend): models namespace changes and new invoice, payment & checkout pages - new invoice table for admins, checkout for customers - add payment status, methods and form pages - changed all model namespaces to point to Models - correct namespace imports - add separate Invoice and PaymentRecord types to Payment model - update gitignore to include postman/newman html, xml and json output files - new appSettings.json to pass api base url into app build - WIP: InvoiceService with experimental funcs

--- a/apps/frontend/Pages/Admin/Inventories.razor
+++ b/apps/frontend/Pages/Admin/Inventories.razor
@@ -2,9 +2,8 @@
 @layout MainLayout
 @inject InventoryService InventoryService
 @inject ToastService ToastService
-@using frontend.Models.Errors
-@using frontend.Models.Shared
 @using frontend.Pages.Shared.Components.Tables
+@using frontend.Models
 
 @inject NavigationManager Navigation
 
