--- a/apps/frontend/Pages/Admin/MyStore.razor
+++ b/apps/frontend/Pages/Admin/MyStore.razor
@@ -1,6 +1,6 @@
 @page "/admin/my-store"
 @layout MainLayout
-@using frontend.Models.Store
+@using frontend.Models
 @inject StoreService StoreService
 @inject ToastService ToastService
 
