--- a/apps/frontend/Pages/Admin/Notifications.razor
+++ b/apps/frontend/Pages/Admin/Notifications.razor
@@ -3,7 +3,7 @@
 @inject NotificationService NotificationService
 @inject ToastService ToastService
 
-@using frontend.Models.Notification
+@using frontend.Models
 @using frontend.Pages.Shared.Components.NotificationItem
 
 <h2 class="text-xl font-semibold mb-4">All Notifications</h2>
