--- a/apps/frontend/Pages/Admin/Users.razor
+++ b/apps/frontend/Pages/Admin/Users.razor
@@ -1,7 +1,6 @@
 @page "/admin/users"
 @layout MainLayout
-@using frontend.Models.User
-@using frontend.Models.Shared
+@using frontend.Models
 @using frontend.Pages.Shared.Components.Tables
 @inject UserService UserService
 @inject ToastService ToastService
