--- a/apps/frontend/Pages/Customer/MyOrders.razor
+++ b/apps/frontend/Pages/Customer/MyOrders.razor
@@ -1,7 +1,6 @@
 @page "/customer/myorders"
 @layout MainLayout
-@using frontend.Models.Order
-@using frontend.Models.Shared
+@using frontend.Models
 @using frontend.Pages.Shared.Components.Tables
 @inject OrderService OrderService
 @inject DropdownDataService DropdownDataService
