--- a/apps/frontend/Pages/Customer/OrderFeedback.razor
+++ b/apps/frontend/Pages/Customer/OrderFeedback.razor
@@ -1,6 +1,6 @@
 @page "/customer/feedback"
 @layout MainLayout
-@using frontend.Models.Feedback
+@using frontend.Models
 @inject AuthenticationStateProvider AuthProvider
 @inject NavigationManager Navigation
 @inject FeedbackService FeedbackService
