--- a/apps/frontend/Pages/PublicStore.razor
+++ b/apps/frontend/Pages/PublicStore.razor
@@ -2,7 +2,7 @@
 @layout PublicLayout
 @inject StoreService StoreService
 @inject InventoryService InventoryService
-@using frontend.Models.Store
+@using frontend.Models
 
 <h2 class="text-2xl font-bold">@store?.Name</h2>
 
