--- a/apps/frontend/Pages/Shared/Components/CreateInventoryForm.razor
+++ b/apps/frontend/Pages/Shared/Components/CreateInventoryForm.razor
@@ -1,4 +1,4 @@
-@using frontend.Models.Inventory
+@using frontend.Models
 @using frontend.Pages.Shared.Components.InputField
 @using System.Text.Json
 @inject InventoryService InventoryService
