--- a/apps/frontend/Pages/Shared/Components/CreateOrderForm.razor
+++ b/apps/frontend/Pages/Shared/Components/CreateOrderForm.razor
@@ -1,4 +1,4 @@
-@using frontend.Models.Order
+@using frontend.Models
 @using frontend.Pages.Shared.Components.InputField
 @inject OrderService OrderService
 @inject NavigationManager Navigation
