--- a/apps/frontend/Pages/Shared/Components/CreateStoreForm.razor
+++ b/apps/frontend/Pages/Shared/Components/CreateStoreForm.razor
@@ -1,4 +1,4 @@
-@using frontend.Models.Store
+@using frontend.Models
 @using frontend.Pages.Shared.Components.InputField
 
 @inject StoreService StoreService
