--- a/apps/frontend/Pages/Shared/Components/CreateUserForm.razor
+++ b/apps/frontend/Pages/Shared/Components/CreateUserForm.razor
@@ -1,4 +1,4 @@
-@using frontend.Models.User
+@using frontend.Models
 @using frontend.Pages.Shared.Components.InputField
 
 @inject UserService UserService
