--- a/apps/frontend/Pages/Shared/Components/Navbar.razor
+++ b/apps/frontend/Pages/Shared/Components/Navbar.razor
@@ -1,7 +1,7 @@
-@using frontend.Services.CustomAuthStateProvider
+@using frontend.Services
 @using Microsoft.AspNetCore.Components.Routing
 @inject CustomAuthStateProvider AuthProvider
-@using frontend.Models.Notification
+@using frontend.Models
 @inject NavigationManager Navigation
 
 <nav class="w-full bg-white shadow-md px-6 py-3 flex items-center justify-between max-w-7xl mx-auto">
