--- a/apps/frontend/Pages/Shared/Components/NotificationDropdown.razor
+++ b/apps/frontend/Pages/Shared/Components/NotificationDropdown.razor
@@ -1,5 +1,5 @@
-@using frontend.Models.Notification
-@using frontend.Services.CustomAuthStateProvider
+@using frontend.Models
+@using frontend.Services
 @inject NotificationService NotificationService
 @inject ToastService ToastService
 @inject CustomAuthStateProvider AuthProvider
