--- a/apps/frontend/Pages/Shared/Layouts/AuthorizedLayout.razor
+++ b/apps/frontend/Pages/Shared/Layouts/AuthorizedLayout.razor
@@ -1,5 +1,5 @@
 @using frontend.Pages.Shared.Components
-@using frontend.Services.CustomAuthStateProvider
+@using frontend.Services
 @using System.Security.Claims
 @using frontend.Pages.Shared.Sidebars
 @inject NavigationManager Navigation
