--- a/apps/frontend/Pages/Admin/Orders.razor
+++ b/apps/frontend/Pages/Admin/Orders.razor
@@ -1,8 +1,7 @@
 @page "/admin/orders"
 @layout MainLayout
 @using System.Text.Json
-@using frontend.Models.Order
-@using frontend.Models.Shared
+@using frontend.Models
 @using frontend.Pages.Shared.Components.Tables
 @inject OrderService OrderService
 @inject DropdownDataService DropdownDataService
