--- a/apps/frontend/Pages/Shared/Components/NotificationItem.razor
+++ b/apps/frontend/Pages/Shared/Components/NotificationItem.razor
@@ -1,5 +1,5 @@
-@using frontend.Models.Notification
 @namespace frontend.Pages.Shared.Components.NotificationItem
+@using frontend.Models
 
 <div class="flex justify-between items-center p-3 border rounded-lg @(Notification.Status == NotificationStatus.Read ? "bg-gray-50" : "bg-orange-50")">
     <div>
