--- a/apps/frontend/Pages/Shared/Components/Tables/OrderTable.razor
+++ b/apps/frontend/Pages/Shared/Components/Tables/OrderTable.razor
@@ -1,4 +1,4 @@
-@using frontend.Models.Order
+@using frontend.Models
 
 <table class="min-w-full table-auto text-sm text-left text-gray-700">
     <thead class="bg-gray-50 text-xs uppercase text-gray-500 border-b">
