--- a/apps/frontend/Pages/Shared/Layouts/PublicLayout.razor
+++ b/apps/frontend/Pages/Shared/Layouts/PublicLayout.razor
@@ -1,4 +1,5 @@
 @inherits LayoutComponentBase
+@namespace frontend.Pages.Shared.Layouts
 @using frontend.Pages.Shared
     
 <div class="flex flex-col min-h-screen pt-12">
