--- a/apps/frontend/_Imports.razor
+++ b/apps/frontend/_Imports.razor
@@ -10,14 +10,9 @@
 @using Microsoft.JSInterop
 
 @using frontend
-@using frontend.Pages
-@using frontend.Pages.Shared
-@using frontend.Pages.Shared.Sidebars
-@using frontend.Models.User
-@using frontend.Models.Delivery
-@using frontend.Models.Inventory
-@using frontend.Models.Errors
-@using frontend.Models.Store
 @using frontend.Services
+@using frontend.Pages
 @using frontend.Pages.Shared.Layouts
+@using frontend.Pages.Shared.Components
+@using frontend.Models
 @using LeafletForBlazor
