--- a/apps/frontend/Pages/Shared/Components/InvoiceFilters.razor
+++ b/apps/frontend/Pages/Shared/Components/InvoiceFilters.razor
@@ -11,18 +11,18 @@
     </select>
 
     <input
-        class="px-3 py-2 border rounded"
+        class="px-3 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500"
         placeholder="Search customer or invoice"
         @bind="Search" />
 
     <input
         type="date"
-        class="px-3 py-2 border rounded"
+        class="px-3 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500"
         @bind="From" />
 
     <input
         type="date"
-        class="px-3 py-2 border rounded"
+        class="px-3 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500"
         @bind="To" />
 
     <button
