feat (frontend): UI update and new change password feature - new changepassword model and page, backend WIP - improved ui, settings, profile and notification dropdown - import path update for sidebar and lucide icon components

--- a/apps/frontend/Pages/Shared/Components/Icons/LucideIcon.razor
+++ b/apps/frontend/Pages/Shared/Components/Icons/LucideIcon.razor
@@ -1,4 +1,4 @@
-@namespace frontend.Pages.Shared.Icons
+@namespace frontend.Pages.Shared.Components.Icons
 
 <svg xmlns="http://www.w3.org/2000/svg" fill="none"
      viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"
